# Mesh_viewer

./: CMakeLists.txt  CMakeLists_deprec.txt  README.md
models/CC_animals/: readme.md
models/nefertiti/: readme.md
models/planets/: readme.md
models/standford_meshes/: readme.md
models/textures/: readme.md
src/: drawablemesh.cpp  drawablemesh.h  glwidget.cpp  glwidget.h  main.cpp  mesh.h  scene.cpp  scene.h  trimeshhe.cpp  trimeshhe.h  trimeshsoup.cpp  trimeshsoup.h  viewer.cpp  viewer.h  window.cpp  window.h
src/QGLtoolkit/: camera.h  cameraFrame.h  frame.h  quaternion.h
src/shaders/: phong.frag  phong.vert  phong_2.frag  phong_2.vert  wireframe.frag  wireframe.vert
src_deprec/: drawablemesh.cpp  drawablemesh.h  main.cpp  mesh.h  trimeshhe.h  window.h
src_deprec/shaders/: phong.frag
